force-app/main/default/objects/Question_3__c/Question_3__c.object-meta.xml
<CustomObject>
    <label>Question 3</label>
    <nameField>
        <label>Question 3 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question 3</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>