force-app/main/default/objects/Question_3__c/fields/Answer_2__c.field-meta.xml
<CustomField>
    <fullName>Answer_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Answer 2</label>
    <referenceTo>Answer_2__c</referenceTo>
    <relationshipLabel>Question 3</relationshipLabel>
    <relationshipName>Question_3</relationshipName>
    <type>Lookup</type>
</CustomField>