force-app/main/default/objects/Question_3__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Question 3</relationshipLabel>
    <relationshipName>Question_3</relationshipName>
    <type>Lookup</type>
</CustomField>