force-app/main/default/objects/Question_3__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label>Products</label>
    <length>128</length>
    <type>Text</type>
</CustomField>