force-app/main/default/objects/Question_3__c/fields/Required_Products__c.field-meta.xml
<CustomField>
    <fullName>Required_Products__c</fullName>
    <label>Required Products</label>
    <length>128</length>
    <type>Text</type>
</CustomField>