force-app/main/default/objects/Question_3__c/fields/Yes__c.field-meta.xml
<CustomField>
    <fullName>Yes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Yes</label>
    <type>Checkbox</type>
</CustomField>